<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".fragments.DailyFragment">

    <!--    DateTime    -->
    <androidx.cardview.widget.CardView
        android:id="@+id/dateCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="12dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="20dp">

            <TextClock
                android:id="@+id/textClockDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/instrumentserif_regular"
                android:format12Hour="MMM dd"
                android:format24Hour="MMM dd"
                android:textSize="20sp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextClock
                android:id="@+id/textClockDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/instrumentserif_regular"
                android:format12Hour="EEEE"
                android:format24Hour="EEEE"
                android:textSize="25sp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textClockDate" />

            <TextClock
                android:id="@+id/textClockHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/instrumentserif_regular"
                android:format12Hour="HH:mm a"
                android:format24Hour="HH:mm"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textClockDay" />

            <TextView
                android:id="@+id/helloUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/instrumentserif_regular"
                android:gravity="end"
                android:text="@string/helloUser"
                android:textSize="40sp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.39" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!--    Quotes API      -->
    <androidx.cardview.widget.CardView
        android:id="@+id/quoteCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/quoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_quote"
                android:fontFamily="@font/dmseriftext_italic"
                android:textSize="30sp"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/authorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tinos_regular"
                android:text="@string/loading_author"
                android:textColor="#6D5959"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/quoteText"
                app:layout_constraintStart_toStartOf="@+id/quoteText"
                app:layout_constraintTop_toBottomOf="@+id/quoteText" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!--  Today's Journal Entry  -->
    <EditText
        android:id="@+id/journalEntryTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/entryTitle"
        android:inputType="text"
        android:layout_marginHorizontal="15dp"
        android:fontFamily="@font/instrumentserif_regular"
        app:layout_constraintEnd_toEndOf="@+id/quoteCard"
        app:layout_constraintStart_toStartOf="@+id/quoteCard"
        app:layout_constraintTop_toBottomOf="@+id/quoteCard" />

    <EditText
        android:id="@+id/journalEntryText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/journal_entry_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:fontFamily="@font/instrumentserif_regular"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="@+id/journalEntryTitle"
        app:layout_constraintStart_toStartOf="@+id/journalEntryTitle"
        app:layout_constraintTop_toBottomOf="@+id/journalEntryTitle" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/save_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/journalEntryText"
        app:layout_constraintStart_toStartOf="@+id/journalEntryText" />

</androidx.constraintlayout.widget.ConstraintLayout>